# CppTypeCategory

./: CMakeLists.txt  TypeInfo.h  main.cpp
